[project]
name = "mailguardian"
version = "3.0.0"
description = "Powerful toolstack to process emails using MailScanner"
authors = [
    { name = "Kenneth Hansen", email = "kenneth@khansen-it.dk" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "distro==1.9.*",
    "dj-rest-auth==7.0.*",
    "django[argon2]==4.2.*",
    "django-cors-headers==4.4.*",
    "django-cryptography==1.1.*",
    "django-extensions==3.2.*",
    "djangorestframework>=3.15.*",
    "geoip2==4.8.*",
    "gunicorn==23.0.*",
    "premailer==3.10.*",
    "psycopg==3.1.*",
    "pymailq==0.9.*",
    "pyotp==2.9.*",
    "python-crontab==3.2.*",
    "requests==2.32.*",
    "pytz>=2025.2",
]
